# infrastructure/src/main/java/co/edu/uco/infraestructure/config/InfrastructureConstant.java
@@ -78,13 +78,8 @@ public final class InfrastructureConstant {
     public static final String DOPPLER_DTO_VALUE = "value";
     public static final String DOPPLER_DTO_RAW = "raw";
     public static final String DOPPLER_CONFIG_PREFIX = "doppler";
-    public static final String WEB_CONFIG_API_MESSAGE = "/messageucolab/v1/application/**/message/*";
     public static final String WEB_CONFIG_API_APPLICATION = "/messageucolab/v1/application/**/message/*";
-    public static final String WEB_CONFIG_API_ENVIRONMENT = "/messageucolab/v1/application/environment";
-    public static final String WEB_CONFIG_API_MESSAGE_LIST = "/messageucolab/v1/application/messages";
-    public static final String WEB_CONFIG_API_MESSAGE_CODE = "/messageucolab/v1/application/messages/*";
-    public static final String WEB_CONFIG_API_MESSAGE_CODE_TRANSLATION = "/messageucolab/v1/application/messages/*/translation";
-    public static final String WEB_CONFIG_API_CREATE_MESSAGE = "/messageucolab/v1/application/message";
+    public static final String WEB_CONFIG_API_MESSAGES = "/messageucolab/v1/messages/**";
     public static final String WEB_CONFIG_API_CATALOG = "/messageucolab/v1/catalog/**";
 
     public static final String SWAGGER_UI_HTML = "/swagger-ui.html";
