# infrastructure/src/main/java/co/edu/uco/infraestructure/primaryadapters/CreateEnvironmentController.java
@@ -1,22 +1,0 @@
-package co.edu.uco.infraestructure.primaryadapters;
-
-import co.edu.uco.application.primaryports.dto.environment.CreateEnvironmentDTO;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-
-@RequestMapping("${crosswords.api.path.environment}")
-public interface CreateEnvironmentController {
-
-    @PostMapping(
-            consumes = "application/json",
-            produces = {"application/json", "application/yaml", "application/xml", "text/plain", "text/html"}
-    )
-    void createEnvironment(
-            @RequestBody CreateEnvironmentDTO createEnvironmentDTO,
-            HttpServletRequest httpServletRequest,
-            HttpServletResponse httpServletResponse
-    );
-}
