# infrastructure/src/main/java/co/edu/uco/infraestructure/primaryadapters/CreateMessageController.java
@@ -7,11 +7,10 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 
-@RequestMapping("${crosswords.api.path.message}")
+@RequestMapping("${crosswords.api.path.messages}")
 public interface CreateMessageController {
 
     @PostMapping(
-            value = "/message",
             consumes = "application/json",
             produces = {"application/json", "application/yaml", "application/xml", "text/plain", "text/html"}
     )
